--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <hr />
         </div>
         <footer>
-          <p>FSD-WD-T-B8-Tutorials</p>
+          <p>Ram</p>
         </footer>
       </div>
     </div>
